testsuite/should_fail/various_sem.lla
let rec ignore (v1: int ) : unit = print_int v1 ; print_string "\n"
and v1 : unit = (* NO variables allowed in let rec *) 
    let next (v1 : int ) : int = v1+1
    and twice (v1:int->int) ( x: int) : int  = v1 (v1 x)
    in ignore (twice next 0)
